# iva_app

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/iva/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/MATLAB/: compute_eig.cpp  compute_eig.h  compute_eig_data.cpp  compute_eig_data.h  compute_eig_initialize.cpp  compute_eig_initialize.h  compute_eig_rtwutil.cpp  compute_eig_rtwutil.h  compute_eig_terminate.cpp  compute_eig_terminate.h  compute_eig_types.h  compute_iva.cpp  compute_iva.h  compute_iva_data.cpp  compute_iva_data.h  compute_iva_initialize.cpp  compute_iva_initialize.h  compute_iva_rtwutil.cpp  compute_iva_rtwutil.h  compute_iva_terminate.cpp  compute_iva_terminate.h  compute_iva_types.h  fft.cpp  fft.h  flip.cpp  flip.h  ifft.cpp  ifft.h  init_iva.cpp  init_iva.h  pinv.cpp  pinv.h  recip.cpp  recip.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  (+32 more)
app/src/main/cpp/buffering/: AsyncRingBuffer.cpp  AsyncRingBuffer.h  RingBuffer.cpp  RingBuffer.h
app/src/main/cpp/engine/: AudioIOEngine.cpp  AudioIOEngine.h  AudioInputEngine.cpp  AudioInputEngine.h  AudioOutputEngine.cpp  AudioOutputEngine.h  Constants.h  IVAProcessor.cpp  IVAProcessor.h  fft.h
app/src/main/java/com/example/iva/Audio/: IVAProcessor.java  MicLab.java  PreferredMic.java  SingleChannelMic.java
app/src/main/java/com/example/iva/Database/: Preferences.java  PreferencesBaseHelper.java  PreferencesCursorWrapper.java  PreferencesDbSchema.java  PreferencesLab.java
app/src/main/java/com/example/iva/UI/: MainActivity.java  PermissionActivity.java  PreferencesActivity.java
app/src/main/res/drawable-anydpi/: ic_menu_settings.xml
app/src/main/res/layout/: activity_main.xml  activity_preferences.xml
app/src/main/res/menu/: preferences.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/iva/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
